Fixed issue with text not aligning in the center

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -160,6 +160,7 @@ ol{
   .filterText .title {
   font-size: 2.5em;
   text-transform: uppercase;
+  text-align: center;
   color: rgb(255, 255, 255);
   opacity: 0;
   transition-delay: 0.2s;
